# hightea-client

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  highteacli.py  pyproject.toml  setup.py  test.json
doc/source/: conf.py  index.rst
docs/: conf.py  index.rst  requirements.txt
example_notebooks/: Example Notebook.ipynb
highteacli/: __init__.py  apiactions.py  app.py  interface.py
src/hightea/client/: __init__.py  apiactions.py  datahandler.py  interface.py
